crates/stackable-versioned-macros/tests/inputs/fail/deprecate.stderr
error: deprecation must be done using `#[versioned(deprecated(since = "VERSION"))]`
  --> tests/inputs/fail/deprecate.rs:10:9
   |
10 |         #[deprecated]
   |         ^
